builder/tests/13-duplicated-each-parameter.stderr
error: expected `each` to be present only once
   |
22 |     #[builder(each = "arg", each = "arg")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
